
# NOTE: Jun 26, 2014 - Version 0.26 Beta - Added line graphs and pandas data frames
# NOTE: Jun 27, 2014 - Version 0.27 Beta - Added Graphing GUI

# NOTE: Jun 28, 2014 - Version 0.27a Beta - Additions to plots and plot GUI

# NOTE: Jun 30, 2014 - Version 0.27b Beta - Additions to plots and plot GUI.  Modified main GUI to pop-up Plot GUI afterwards.

# NOTE: Jul 1, 2014 - Version 0.27c Beta - Added mulithreading to plot creation task. Fixed bug on Windows associated with trying to create GUI components from outside the main thred

# NOTE: Jul 2, 2014 - Version 0.27d Beta - Fixed bugs associated with graphs and related plotting data

# NOTE: Jul 28, 2014 - Version 0.28 Beta - Changing ttk based widgets to PMW based widgets

# NOTE: Aug 21, 2014 - Version 0.29 Beta - Adding DnD panel for choosing plots along with 'OK' and 'Cancel' buttons to confirm or close said DnD panel

# NOTE: Sep 10, 2014 - Version 0.29 Beta - Added install script to program

# NOTE: Sep 11, 2014 - Version 0.30 Beta - Fixed plot elements - Fixed bugs that cause errors when the plots are closed

# NOTE: Sep 12, 2014 - Version 0.31 Beta - Fixed stack ordering of windows so that last window opened prior to opening to another shows up when the other closes - Fixed multiple bugs when new program jobs are created, removed, cancelled, etc. - Added log filename to bottom of plot window - Changed plot window to display not plots initially - Changed Plot Window so that it can be resized by the user

# NOTE: Sep 23, 2014 - Version 0.32 Beta - Added MyPmwBase.py and MyPmwScrolledFrame.py to local project so that the module Pmw does not need to be installed on other hosts

# NOTE: Oct 1, 2014 - Version 0.33 Beta - Removed limitations to lengths of Station, Model, and Run names - Will also remove '-' and '_', in addition to ' ', from the Station Name so that 'Station X', 'Station-X', and 'Station_X' are all the same